<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pacients"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/btnNewPatient"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/patientlistgradient"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:text="@string/label_newpacients"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_pacients"
        android:textColor="@color/figma_icon_teal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNewPatient"
        app:layout_constraintEnd_toStartOf="@id/btnNewPatient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNewPatient"/>

    <TextView
        android:id="@+id/textcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="(2)"
        android:textColor="@color/figma_muted_foreground"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/textTitle"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/basicWhite"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:startIconDrawable="@drawable/search"
        app:startIconTint="@color/figma_muted_foreground"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewPatient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="12dp"
            android:hint="@string/label_search"
            android:textColor="@color/textPrimary"
            android:gravity="center_vertical"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:inputType="text"
            android:imeOptions="actionSearch" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btnFilters"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/searchbar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLayout">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/filter_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="Filtros"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPacientes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnFilters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_patient_card"/>

</androidx.constraintlayout.widget.ConstraintLayout>
